# EXIFizer

./: .ExifTool_config  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  example_input_film_manifest.md  example_output_exif.txt  exif.txt  exifizer  exifizer.py  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
scripts/catalog_format_converter/: catalog_format_converter.py
scripts/inventory_format_converter/: inventory_format_converter.py
tests/: test_exifizer.py
