# Keep tooling configs in one place (ruff/pytest/vulture/ty, etc.)
# and enable modern packaging (PEP 621).

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "exifizer"
version = "0.1.0"
description = "A bulk EXIF data tagging tool for analog / film photography"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "toozej" }]
keywords = ["exif", "film", "photography", "metadata", "analog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/toozej/EXIFizer"
Issues = "https://github.com/toozej/EXIFizer/issues"
CI = "https://github.com/toozej/EXIFizer/actions"
Changelog = "https://github.com/toozej/EXIFizer/releases"

[project.scripts]
exifizer = "exifizer:main"

# uv dependency groups (PEP 735-style). uv consumes these directly.
[dependency-groups]
test = [
  "pytest>=9.0.0",
  "pytest-xdist>=2.2.1",
]
lint = [
  "ruff>=0.15.9",
  "bandit>=1.7.0",
  "vulture>=2.14",
  "pyupgrade>=3.21.0",
]
dev = [
  "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = ["E501", "E203", "E231", "E722", "C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.vulture]
min_confidence = 80
paths = ["exifizer.py"]

[tool.uv]
python-preference = "only-managed"
